@@ -168,6 +168,12 @@ ot_pyinstallcheck_test (FieldToPointFunction_std)
 ot_pyinstallcheck_test (FieldToPointFunction_python)
 ot_pyinstallcheck_test (PointToFieldFunction_std)
 ot_pyinstallcheck_test (PointToFieldFunction_python)
+if (LIBXML2_FOUND AND DILL_FOUND)
+  ot_pyinstallcheck_test (PythonPointToFieldFunction_save IGNOREOUT)
+  ot_pyinstallcheck_test (PythonPointToFieldFunction_load IGNOREOUT)
+  set_tests_properties(pyinstallcheck_PythonPointToFieldFunction_load
+    PROPERTIES DEPENDS pyinstallcheck_PythonPointToFieldFunction_save)
+endif ()
 ot_pyinstallcheck_test (ParametricPointToFieldFunction_std)
 ot_pyinstallcheck_test (BoxCoxEvaluation_std)
 ot_pyinstallcheck_test (BoxCoxTransform_std)
@@ -189,11 +195,15 @@ ot_pyinstallcheck_test (PointToPointConnection_std)
 ot_pyinstallcheck_test (PointToFieldConnection_std)
 ot_pyinstallcheck_test (FieldToPointConnection_std)
 ot_pyinstallcheck_test (FieldToFieldConnection_std)
-
-# Parallel
 if (NUMPY_FOUND)
-ot_pyinstallcheck_test (PythonFunction_multiprocessing IGNOREOUT)
+  ot_pyinstallcheck_test (PythonFunction_multiprocessing IGNOREOUT)
 endif()
+if (LIBXML2_FOUND AND DILL_FOUND)
+  ot_pyinstallcheck_test (PythonFunction_save IGNOREOUT)
+  ot_pyinstallcheck_test (PythonFunction_load IGNOREOUT)
+  set_tests_properties(pyinstallcheck_PythonFunction_load
+    PROPERTIES DEPENDS pyinstallcheck_PythonFunction_save)
+endif ()
 
 # Stat
 ot_pyinstallcheck_test (Sample_std)
@@ -358,6 +368,12 @@ ot_pyinstallcheck_test (RandomVector_distribution)
 ot_pyinstallcheck_test (RandomVector_composite)
 ot_pyinstallcheck_test (RandomVector_conditional)
 ot_pyinstallcheck_test (RandomVector_python)
+if (LIBXML2_FOUND AND DILL_FOUND)
+  ot_pyinstallcheck_test (PythonRandomVector_save IGNOREOUT)
+  ot_pyinstallcheck_test (PythonRandomVector_load IGNOREOUT)
+  set_tests_properties(pyinstallcheck_PythonRandomVector_load
+    PROPERTIES DEPENDS pyinstallcheck_PythonRandomVector_save)
+endif ()
 ot_pyinstallcheck_test (Event_system IGNOREOUT)
 
 ## Process
@@ -570,6 +586,12 @@ endif ()
 ot_pyinstallcheck_test (Distribution_python)
 if (LIBXML2_FOUND)
 ot_pyinstallcheck_test (Distribution_python_saveload)
+endif ()
+if (LIBXML2_FOUND AND DILL_FOUND)
+  ot_pyinstallcheck_test (PythonDistribution_save IGNOREOUT)
+  ot_pyinstallcheck_test (PythonDistribution_load IGNOREOUT)
+  set_tests_properties(pyinstallcheck_PythonDistribution_load
+    PROPERTIES DEPENDS pyinstallcheck_PythonDistribution_save)
 endif ()
 ot_pyinstallcheck_test (Distribution_gradient IGNOREOUT)
 ot_pyinstallcheck_test (Distribution_quantile)
